# walk_router

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
src/: graph.py  main.py  utils.py
tests/: test_graph.py
tests/test_cli/: sample_graph  test_cli.py
