[tool.poetry]
name = "walk_router"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <anton.petrov.swe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
